--- a/capstone/src/Styles/MealPlan/ShoppingList.css
+++ b/capstone/src/Styles/MealPlan/ShoppingList.css
@@ -34,5 +34,4 @@
     cursor: pointer;
     transition: background-color 0.3s;
     text-align: center;
-    margin-top: 8px;
 }
